<resources>
    <string name="app_name">Picalilly</string>
    <string name="app_label">Picalilly</string>
    <string name="icon_unknown">Unknown Icon</string>
    <string name="chooser_title">Share this photo via</string>
    <string name="button_share">Share</string>
    <string name="button_send">Send</string>
    <string name="button_add_comment">Add</string>
    <string name="add_comment">Add a comment</string>
    <string name="create_group">New group</string>
    <string name="no_data">Loading data...</string>
    <string name="search">Search</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="private_group">Private</string>
    <string name="followers">Followers</string>
    <string name="locations">Groups near my location</string>
    <string name="other_groups">My Other groups</string>
    <string name="other_public_groups">Other public groups</string>
    <string name="select_group">Select group</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_friend">Select a friend</string>
    <string name="error_google_services_missing">You do not have Google Play Services installed, which is required for Picalilly to work. Click the button to install Google Play Services.</string>
    <string name="button_google_service">Install Google Play-services</string>
    <string name="search_hint">Search friends</string>
    <string name="toggle_gps">Update GPS</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="dialog_map">Press and hold on the map to select a location.</string>
    <string name="dialog_local">Press and hold on the map to find the groups on that location.</string>
    <string name="dialog_location">If you select a location for this group, you can only upload photos from within the selected location.</string>
    <string name="dialog_private">Private groups are not visible to everyone. The only way for people to join a private group is when you invite them.</string>
    <string name="dialog_location_error">You have not selected a location for this group</string>
    <string name="dialog_location_select">No location was selected. Press and hold to select a location.</string>
    <string name="dialog_friends">Here you can select multiple friends who will be invited to this group. You can also invite friends later, after the group is created.</string>
    <string name="gcm_register">cmd=registerc2dm&amp;sid=%1$s&amp;key=%2$s</string>
    <string name="gcm_unregister">cmd=unregisterc2dm&amp;sid=%1$s&amp;key=%2$s</string>
    <string name="login_intro">Please log in to continue</string>
    <string name="login_username_txt">Username</string>
    <string name="login_password_txt">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Sign up</string>
    <string name="login_http">cmd=login&amp;u=%1$s&amp;p=%2$s</string>
    <string name="login_validate">cmd=status&amp;sid=%1$s</string>
    <string name="select_friend">Select A Friend</string>
    <string name="login_connection">Unable to connect</string>
    <string name="url_upload">cmd=upload</string>
    <string name="profile_http">cmd=userinfo</string>
    <string name="user_private">This user\'s profile is not publicly visible.</string>
    <string name="user_no_data">This user has not shared any photos yet.</string>
    <string name="groups_http">cmd=allgroups&amp;sid=%1$s&amp;joined=1</string>
    <string name="groups_http_owner">cmd=isowner&amp;sid=%1$s&amp;gid=%2$s</string>
    <string name="groups_http_picture">cmd=uploadGroupPic</string>
    <string name="groups_http_gallery">cmd=listpics&amp;sid=%1$s&amp;max=5&amp;gid=%2$s</string>
    <string name="groups_http_create">cmd=addgroup</string>
    <string name="groups_http_locate">cmd=locategroup</string>
    <string name="groups_http_public">cmd=allgroups&amp;sid=%1$s&amp;notjoined=1</string>
    <string name="groups_http_join">cmd=joingroup&amp;sid=%1$s&amp;gid=%2$s</string>
    <string name="groups_http_leave">cmd=leavegroup&amp;sid=%1$s&amp;gid=%2$s</string>
    <string name="groups_http_invite">cmd=add2group</string>
    <string name="groups_http_users_invite">cmd=allusers&amp;sid=%1$s&amp;gid=%2$s</string>
    <string name="groups_http_users">cmd=allusers</string>
    <string name="groups_http_remove">cmd=deletegroup</string>
    <string name="group_private">Private Group</string>
    <string name="group_location">Location locked</string>
    <string name="group_create_friends">Invite Friends</string>
    <string name="group_create_name">Group name</string>
    <string name="group_create_description">Enter a description</string>
    <string name="group_create_location">Choose a location</string>
    <string name="group_create_location_search">Find location</string>
    <string name="group_create_location_button">Find</string>
    <string name="group_create_title">Create a new group</string>
    <string name="join_group">Join Group</string>
    <string name="group_join_title">Join a public group</string>
    <string name="group_change_pic">Change group picture</string>
    <string name="group_change_delete">Remove group</string>
    <string name="groups_empty">You are not a member of any group, create a new group or join a public group using the menu button.</string>
    <string name="groups_no_location">You are not near any location based group.</string>
    <string name="groups_no_other">You are not in any other group.</string>
    <string name="groups_no_member">You are not a member of this group.</string>
    <string name="group_menu_dialog">What would you like to see?</string>
    <string name="group_http_detail">cmd=group</string>
    <string name="group_http_detail_photos">cmd=listpics&amp;sid=%1$s&amp;gid=%2$s&amp;comments=1</string>
    <string name="group_detail_info">Tap for group info</string>
    <string name="group_detail_private">This group is private, you must be invited to view pictures of this group.</string>
    <string name="group_detail_no_data">There are no photos for this group.</string>
    <string name="group_info_members">Members</string>
    <string name="friends_http">cmd=getfriends</string>
    <string name="friends_http_invite">cmd=searchfriends</string>
    <string name="friends_http_add">cmd=addfriends</string>
    <string name="friends_http_request">cmd=request</string>
    <string name="friends_http_confirm">cmd=friends_confirm&amp;sid=%1$s&amp;friend=%2$s&amp;accept=%3$s</string>
    <string name="friends_header_title">Friends</string>
    <string name="friends_search_empty">No users found or you have not added any friends yet.</string>
    <string name="friends_empty">You don\'t have any friends at the moment. Click the button above to add new friends.</string>
    <string name="friends_requests">%1$s request</string>
    <string name="local_empty_text">No local pictures are available at the moment.</string>
    <string name="local_title">Explore</string>
    <string name="local_http">cmd=locateradius</string>
    <string name="local_http_groups">cmd=localgroups</string>
    <string name="local_http_point">cmd=localpoint</string>
    <string name="local_map_filter_title">Map Settings</string>
    <string name="local_map_filter_description">Show photos from&#8230;</string>
    <string name="local_map_filter_date">Show photos posted since&#8230;</string>
    <string name="local_map_filter_groups">My Groups</string>
    <string name="local_map_filter_friends">My Friends</string>
    <string name="local_map_filter_all">Everyone</string>
    <string name="local_map_filter_other">Other settings</string>
    <string name="local_map_filter_borders">Show group borders</string>
    <string name="local_map_filter_yesterday">Yesterday</string>
    <string name="local_map_filter_last_week">Last Week</string>
    <string name="local_map_filter_last_month">Last Month</string>
    <string name="local_map_filter_all_time">All time</string>
    <string name="news_http">cmd=news</string>
    <string name="news_empty">Welcome to Picalilly! \n\n\n This page will show you updates from all your friends. \n\n You don\'t have any friends yet, or your friends did not post any content.</string>
    <string name="news_txt_group">%1$s joined the group %2$s.</string>
    <string name="news_txt_photo">%1$s posted a new photo in group %2$s.</string>
    <string name="sub_create_title">Create Subscription</string>
    <string name="sub_create_name">Subscription name</string>
    <string name="sub_select_friend">Follow friend</string>
    <string name="sub_select_location">Follow location</string>
    <string name="subscriptions_no_data">You don\'t have any subscriptions yet, click the menu button above to create one.</string>
    <string name="subscriptions_http">cmd=listsubscriptions&amp;sid=%1$s</string>
    <string name="subscriptions_http_photos">cmd=listsubscriptions&amp;sid=%1$s&amp;ssid=%2$s&amp;comments=1</string>
    <string name="subscriptions_http_create">cmd=addsubscription</string>
    <string name="subscriptions_http_remove">cmd=removesubscription</string>
    <string name="subscription_static_map">http://maps.googleapis.com/maps/api/staticmap?center=%1$s,%2$s&amp;zoom=%3$s&amp;size=100x100&amp;sensor=false&amp;key=%4$s</string>
    <string name="like_txt">%1$s people like this.</string>
    <string name="profile_camera">Change my picture</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_group_create">Create Group</string>
    <string name="menu_group_join">Join Group</string>
    <string name="menu_help">Help</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_notifications_feedback">Notification Feedback</string>
    <string name="pref_title_not_use_sound">Use sound</string>
    <string name="pref_summary_not_use_sound">Add sound to notifications</string>
    <string name="pref_title_not_use_vibrate">Use vibration</string>
    <string name="pref_summary_not_use_vibrate">Add vibration to notifications</string>
    <string name="pref_notifications">Select Notifications</string>
    <string name="pref_title_not_photo_upload">Photo upload</string>
    <string name="pref_summary_not_photo_upload">When someone uploads a photo to a group I am in</string>
    <string name="pref_title_not_photo_comment">Comment</string>
    <string name="pref_summary_not_photo_comment">When someone comments on my photo</string>
    <string name="pref_title_not_photo_like">Likes</string>
    <string name="pref_summary_not_photo_like">When someone likes my photo</string>
    <string name="pref_title_not_invite">Invitation</string>
    <string name="pref_summary_not_invite">When someone invites me to a group</string>
    <string name="pref_title_not_sub">Subscription</string>
    <string name="pref_summary_not_sub">When a person I am subscribed to uploads a photo</string>
    <string name="pref_title_not_friends">Friends</string>
    <string name="pref_summary_not_friends">When someone adds me as a friend</string>
	<string name="intent_intro">Share A Photo</string>
	<string name="intent_img_description">This is the image that was shared.</string>
	<string name="share_location_default">Photo location is not set. \n Wait for GPS or set manually.</string>
    <string name="feedback_create_title">Add feedback</string>
    <string name="feedback_create_record_desc">You can record audio feedback by pressing the buttons below. You can also add a text message.</string>
    <string name="feedback_create_record_start">Start Recording</string>
    <string name="feedback_create_play_start">Start Playing</string>
    <string name="feedback_create_message">Feedback message</string>
</resources>