<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory 
        android:title="@string/pref_notifications_feedback"
        android:key="pref_key_notifications">
        <CheckBoxPreference
            android:key="pref_key_not_use_sound"
            android:summary="@string/pref_summary_not_use_sound"
            android:title="@string/pref_title_not_use_sound"
        	android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_key_not_use_vibrate"
            android:summary="@string/pref_summary_not_use_vibrate"
            android:title="@string/pref_title_not_use_vibrate"
        	android:defaultValue="true" />
    </PreferenceCategory>    
    
	<PreferenceCategory 
        android:title="@string/pref_notifications"
        android:key="pref_key_notifications">    
        <CheckBoxPreference
            android:key="pref_key_not_photo_upload"
            android:summary="@string/pref_summary_not_photo_upload"
            android:title="@string/pref_title_not_photo_upload"
        	android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_key_not_photo_comment"
            android:summary="@string/pref_summary_not_photo_comment"
            android:title="@string/pref_title_not_photo_comment"
        	android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_key_not_photo_like"
            android:summary="@string/pref_summary_not_photo_like"
            android:title="@string/pref_title_not_photo_like"
        	android:defaultValue="true" />
        
        <CheckBoxPreference
            android:key="pref_key_not_friends"
            android:summary="@string/pref_summary_not_friends"
            android:title="@string/pref_title_not_friends"
        	android:defaultValue="true" />
        
        <CheckBoxPreference
            android:key="pref_key_not_sub"
            android:summary="@string/pref_summary_not_sub"
            android:title="@string/pref_title_not_sub"
        	android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_key_not_invite"
            android:summary="@string/pref_summary_not_invite"
            android:title="@string/pref_title_not_invite"
        	android:defaultValue="true" />
    </PreferenceCategory>
	
</PreferenceScreen>