<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
          android:icon="@drawable/ic_menu_search"
          android:title="@string/menu_search" />
    <item android:id="@+id/camera"
          android:icon="@drawable/ic_menu_camera"
          android:title="@string/menu_camera" />
    <item android:id="@+id/refresh"
          android:icon="@drawable/ic_menu_refresh"
          android:title="@string/menu_refresh" />
    <item android:id="@+id/create_group"
          android:title="@string/menu_group_create" />
    <item android:id="@+id/settings"
          android:icon="@drawable/ic_menu_preferences"
          android:title="@string/menu_settings" />
    <item android:id="@+id/help"
          android:icon="@drawable/ic_menu_help"
          android:title="@string/menu_help" />
</menu>