<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/group_create_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_create_name"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/button_send" >

        <requestFocus />
    </EditText>

    <ImageView 
        android:id="@+id/button_send"
        android:src="@drawable/ic_menu_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/button_send"
        android:onClick="onCreateClick" />
    
    <EditText
        android:id="@+id/group_create_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_create_name"
        android:inputType="textMultiLine"
        android:lines="3"
        android:hint="@string/group_create_description" />

    <CheckBox android:id="@+id/checkbox_private"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_create_desc"
        android:text="@string/group_private" />
        
    <Button
        android:id="@+id/button_invite_friends"
        android:text="@string/group_create_friends"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_private"
    	android:drawableLeft="@drawable/ic_menu_invite"
        android:onClick="onClickFriends" />
    
    <Button
        android:id="@+id/button_location"
        android:text="@string/group_create_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_invite_friends"
    	android:drawableLeft="@drawable/ic_menu_mylocation"
        android:onClick="onClickLocation" /> 
    	   
</RelativeLayout> 

</ScrollView>