<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout 
        android:id="@+id/header"
    	android:background="@color/header_bg"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
         	android:layout_centerVertical="true"
	        android:text="@string/intent_intro"
	        style="@style/HeaderText" />
	    
	    <ImageView 
	        android:id="@+id/button_send"
	        android:src="@drawable/ic_menu_send"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:contentDescription="@string/button_send"
			android:onClick="onClickShare" />
    </RelativeLayout>
	<ScrollView
	    android:id="@+id/content"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@+id/header" >
	
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:focusable="true" android:focusableInTouchMode="true" >
	
			<ImageView 
			    android:id="@+id/image1" 
			    android:contentDescription="@string/intent_img_description"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:adjustViewBounds="true" />
			
			 <ImageView 
			     android:id="@+id/img_location_ok"
			     android:layout_width="wrap_content"
			     android:layout_height="wrap_content"
			     android:layout_below="@+id/image1"
			     android:src="@drawable/button_delete"/>
			 
			 
		    <TextView
		        android:id="@+id/txt_location"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	         	android:layout_centerVertical="true"
		        android:layout_below="@+id/image1"
		        android:layout_toRightOf="@+id/img_location_ok"
		        android:text="@string/share_location_default"
		        android:padding="5dp"  />
		     <ImageButton
			     android:id="@+id/btn_mapmode"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:layout_below="@+id/image1"
		         android:layout_alignParentRight="true"
			     android:padding="0dp"
		         android:onClick="onClickMap"
		         android:src="@drawable/button_map" /> 
		         
			<EditText 
		        android:id="@+id/edit_message"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/btn_mapmode"
		        android:hint="@string/add_comment" />
						
	    	<Button
	    		android:id="@+id/groups_spinner"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
			    android:layout_below="@+id/edit_message"
			    android:layout_toLeftOf="@+id/create_group"
		        android:text="@string/select_group"
			    android:onClick="onClickSelectGroup" />
	    	
	    	<Button 
		        android:id="@+id/create_group"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_below="@+id/edit_message"
        		android:layout_alignParentRight="true"
		        android:text="@string/create_group"
		        android:onClick="onClickCreateGroup" />    
			    
			</RelativeLayout>
	</ScrollView>
</RelativeLayout>