<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout 
        android:id="@+id/header"
    	android:background="@color/header_bg"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	    
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
         	android:layout_centerVertical="true"
	        android:text="@string/profile_camera"
	        style="@style/HeaderText" />
	    
	    <ImageView 
	        android:id="@+id/button_send"
	        android:src="@drawable/ic_menu_send"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:contentDescription="@string/button_send"
			android:onClick="onClickSend" />
    </RelativeLayout>
    
	<ScrollView
	    android:id="@+id/content"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@+id/header" >
	
		<ImageView 
		    android:id="@+id/image1" 
		    android:contentDescription="@string/intent_img_description"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:adjustViewBounds="true" />
			
	</ScrollView>
</RelativeLayout>