<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">
    
    <EditText
        android:id="@+id/et_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btn_find"
        android:inputType="text"
        android:hint="@string/group_create_location_search" />
    
    <ImageView
        android:id="@+id/btn_find"
        android:src="@drawable/ic_menu_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/button_send"
        android:contentDescription="@string/group_create_location_button"
        android:onClick="onSearchClick" />
    
    <ImageView 
        android:id="@+id/button_send"
        android:src="@drawable/ic_menu_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/button_send"
        android:onClick="onSendClick" />
     
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
	  android:id="@+id/map"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:layout_below="@+id/button_send"
	  class="com.google.android.gms.maps.SupportMapFragment"/>
     	   
</RelativeLayout>